<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="24dp"
            android:orientation="vertical"
            android:background="@color/bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleText"
                android:text="@string/enteritem"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_marginBottom="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til1"
                android:hint="@string/itemName"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@android:color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemName"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:inputType="textCapWords"
                    android:padding="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til2"
                android:layout_marginTop="12sp"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@android:color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemQuantity"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:inputType="number"
                    android:padding="15sp"
                    android:hint="@string/itemQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/saveButton"
                android:layout_marginTop="20sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@android:color/white"
                android:text="@string/saveb"
                android:textColor="@color/bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>