<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="5sp"
    android:paddingBottom="5sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="24sp">

        <RelativeLayout
            android:background="@drawable/card_bg"
            android:layout_width="match_parent"
            android:padding="15sp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lay1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/iName"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:paddingBottom="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:text="@string/itemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/iQty"
                    android:paddingLeft="5sp"
                    android:paddingBottom="1sp"
                    android:textSize="16sp"
                    android:paddingRight="5sp"
                    android:text="@string/itemQty"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5sp" />

                <TextView
                    android:id="@+id/iDate"
                    android:paddingLeft="18sp"
                    android:paddingTop="1sp"
                    android:paddingBottom="5sp"
                    android:textSize="16sp"
                    android:paddingRight="5sp"
                    android:text="@string/date"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5sp" />


            </LinearLayout>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/lay1"
                android:orientation="horizontal"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_edit" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_delete" />


            </TableRow>


        </RelativeLayout>




    </androidx.cardview.widget.CardView>


</LinearLayout>